config/kubernetes/metabase/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
  namespace: laa-criminal-applications-metabase
spec:
  replicas: 2
  revisionHistoryLimit: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 50%
      maxSurge: 100%
  selector:
    matchLabels:
      app: laa-criminal-applications-metabase-web
  template:
    metadata:
      labels:
        app: laa-criminal-applications-metabase-web
        tier: frontend
    spec:
      containers:
      - name: webapp
        image: metabase/metabase:latest
        imagePullPolicy: Always
        ports:
          - containerPort: 3000
        resources:
          requests:
            cpu: 25m
            memory: 1Gi
          limits:
            cpu: 500m
            memory: 3Gi
        securityContext:
          allowPrivilegeEscalation: false
          runAsUser: 1000
          runAsGroup: 1000
        readinessProbe:
          httpGet:
            path: /api/health
            port: 3000
          initialDelaySeconds: 60
          periodSeconds: 15
        livenessProbe:
          httpGet:
            path: /api/health
            port: 3000
          initialDelaySeconds: 90
          periodSeconds: 30
