config/kubernetes/metabase/service.yml
apiVersion: v1
kind: Service
metadata:
  name: service-metabase
  namespace: laa-criminal-applications-metabase
  labels:
    app: laa-criminal-applications-metabase-web
spec:
  ports:
  - port: 80
    name: http
    targetPort: 3000
  selector:
    app: laa-criminal-applications-metabase-web
